Sending password recovery token

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,7 +1,10 @@
 email.invalid.format=Provided email is invalid
+email.not.found=Email was not found
+email.sent=Email with {0} has been sent
 field.already.taken={0} is already taken
 field.empty={0} cannot be empty
 password.not.strong.enough=Provided password is not strong enough
 registered=You have been registered
+server.side.error.occurred=Server side error occurred. Please try again
 object.request.empty=Object cannot be empty
 validation.did.not.pass=Validation did not pass
