--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -3,8 +3,11 @@ email.not.found=Email was not found
 email.sent=Email with {0} has been sent
 field.already.taken={0} is already taken
 field.empty={0} cannot be empty
+password.reset=Your password has been reset
 password.not.strong.enough=Provided password is not strong enough
 registered=You have been registered
 server.side.error.occurred=Server side error occurred. Please try again
 object.request.empty=Object cannot be empty
+token.expired=Token has expired
+token.not.found=Token {0} was not found
 validation.did.not.pass=Validation did not pass
